# llm-experiments

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
function_gemma/: predict.py
self_learning/: config.py  main.py
self_learning/game/: game.py
self_learning/services/: llm_memory_service.py
